fixing scrollbar conflict with bootstrap fluid grid
* add to pull request #829
* should fix bug #775

--- a/static/less/badge-accept.less
+++ b/static/less/badge-accept.less
@@ -15,6 +15,15 @@ button,
   display: block;
 }
 
+div#badge-ask.span8 {
+  overflow-y: auto;
+  margin-left: 0;
+}
+
+.framed #body {
+  overflow-y: auto;
+}
+
 .frameless .closeFrame {
   display: none;
 }
